--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<span>~Amazing</span>
 		<span> ~ Unique</span>
 		<span> ~ Cool</span>
-		<span>~Awesome</span>
+		<span>Awesome</span>
 	</h2>
 
 	<script type="text/javascript">
