--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title> Text Rotator </title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Text Rotator Effect | Free Projects1</title>
+	<meta name="keywords" content="free projects1, special learning, get free source code, bholu singh">
+	<meta name="description" content="In this effect, the content value automatically changed at run time. and also set a new value, place on previous value, and this process repeats one by one after a certain time.">
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h2 id="text">Be
